taskcat/sam-templated.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Provision EC2
Parameters:
  SubnetCidr: 
    Type: String
    Default: 10.0.124.0/24
  Ec2SgName:
    Type: String
    Default: ec2-sg-cf
Resources:
  PubSub:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1b
      VpcId: vpc-6c712805
      CidrBlock: !Ref SubnetCidr
      Tags:
        - Key: Name
          Value: pub-sub-a-cf

  PubSubRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: vpc-6c712805
      Tags:
        - Key: Name
          Value: pub-sub-a-rt-cf

  # PubSub-インターネット間のルーティング
  PubSubToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PubSubRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: igw-6d712804

  # ルートテーブルをサブネットに関連付け
  AssoPubSubRT:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PubSub
      RouteTableId: !Ref PubSubRT
  EC2: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-00d101850e971728d
      InstanceType: t2.nano
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          SubnetId: !Ref PubSub
          GroupSet:
            - !Ref EC2SG
      Tags:
          - Key: Name
            Value: ec2-a-cf
  EC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref Ec2SgName
      GroupDescription: Allow SSH and HTTP access only MyIP
      VpcId: vpc-6c712805
      SecurityGroupIngress:
        # http
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        # ssh
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
Outputs:
  EC2PublicIP:
    Value: !GetAtt EC2.PublicIp
    Description: Public IP of EC2 instance
